# nlp

./: main.py  nlp.ipynb  pyproject.toml
data/: appreply2.csv  배달의민족댓글.csv
